Adding deletebook to the API
