# swagger.yaml
@@ -39,6 +39,23 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
+    delete:
+      summary: Delete a book
+      operationId: deleteBook
+      parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: query
+      responses:
+        201:
+          description: Delete book
+          schema:
+            $ref: '#/definitions/Book'
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
   /book/{id}:
     parameters:
     - type: integer
